# rust-http-api

./: Cargo.toml
src/: main.rs
src/business_logic/users/: mod.rs
src/dal/: users.rs
src/data/: mod.rs
src/model/: user.rs
src/routers/users/: mod.rs
