[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
dotenvy = "0.15.7"
serde = { version = "1.0.163", features = ["derive"] }
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics"]}

[dev-dependencies]
cargo-watch = "8.4.0"
